Bug 371812  add bookmark id support to bookmarks html import/export (r=sspitzer)